# uba-algo3-TPs

./: README.md
TP1-tecnicas-algoritmicas/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3(luci).cpp  ejercicio3.cpp  ejercicio3topdown.cpp  ejercicio4.cpp  ejercicio4GRIDI.cpp  ejercicio4ULTIMO.cpp  ejercicio4_FINAL.cpp  ejercicio4_FINAL_SSJ.cpp  ejercicio4alternativo.cpp
TP2/: ejercicio1.cpp
TP2-grafos-recorridos-y-arboles/: CMakeLists.txt  main.cpp
TP2-grafos-y-recorridos/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio3yquepasa.cpp
TP3-camino-minimo-y-flow/: CMakeLists.txt  ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp
