cmake_minimum_required(VERSION 3.26)
project(TP1_tecnicas_algoritmicas)

set(CMAKE_CXX_STANDARD 17)

add_executable(runEj_1 ejercicio1.cpp)
add_executable(runEj_2 ejercicio2.cpp)
add_executable(runEj_3 ejercicio3.cpp)
add_executable(runEj_4 ejercicio4.cpp)
add_executable(runEj_4_FINAL ejercicio4_FINAL.cpp)
add_executable(runEj_4_FINAL_SSJ ejercicio4_FINAL_SSJ.cpp)
add_executable(runEj_4_alt ejercicio4alternativo.cpp)


